fixed layout problems and removed red wrapper

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ h1, h2, h3 {
 
 p, input, li {
   font-family: "Roboto Condensed", sans-serif;
-  color: #2a2a2a
+  color: #2a2a2a;
 }
 
 h1 {
@@ -36,11 +36,11 @@ h2 {
 }
 
 h3 {
-  font-size: 2.2rem
+  font-size: 2.2rem;
 }
 
 p, li {
-  font-size: 1.6rem
+  font-size: 1.6rem;
   line-height: 1.5;
 }
 
@@ -56,8 +56,8 @@ body > * {
 }
 
 main, header, nav, article, aside, footer, section {
-  background-color: rgba(0, 255, 0, 0.5)
-  padding: 1%
+  background-color: rgba(0, 255, 0, 0.5);
+  padding: 1%;
 }
 
 h1 {
